[build-system]
requires = ["aiohttp", "redis", "aiosqlite", "asyncpg", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "blazogram"
version = "2.0.0"
authors = [
  { name = "EgorBlaze", email = "blazeegor@gmail.com" }
]
description = "BLAZOGRAM - is a library for creating Telegram Bots"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/blazeegor/blazogram"
Bug Tracker = "https://github.com/blazeegor/blazogram/issues"
