[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "blazogram"
version = "2.0.0"
authors = [
  { name = "EgorBlaze", email = "blazeegor@gmail.com" }
]
description = "BLAZOGRAM - is a library for creating Telegram Bots"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.dependencies]
python = ">3.8"
aiohttp = "^3.8.6"
asyncio = "^3.4.3"
redis = "^5.0.1"
asyncpg = "^0.28.0"
aiosqlite = "^0.19.0"
locute = "^1.0b5"

[project.urls]
Homepage = "https://github.com/blazeegor/blazogram"
Bug Tracker = "https://github.com/blazeegor/blazogram/issues"
